--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ header h2 {
 	color: white;
 }
 
-footer {
+.site-footer {
 	background-image: linear-gradient(#cec8ff, white);
 	padding: 20px 0;
 }
