--- a/css/styles.css
+++ b/css/styles.css
@@ -45,9 +45,36 @@ header h2 {
 }
 
 .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .carousel {
-    border: solid #5637DD;
+	border: solid #5637dd;
+}
+
+.campGrounds {
+	background-color: #02132c;
+}
+.card-body p {
+	color: black;
+}
+
+.contactInfo {
+	color: black;
+}
+
+label {
+	color: black;
+}
+
+.bg-textbox {
+	background-color: white;
+}
+
+.bg-color {
+	background-color: rgb(0, 166, 255);
+}
+
+.bg-buttoncolor {
+	background-color: rgb(0, 166, 255);
 }
